# Generic-Cellular-Automata

./: CMakeLists.txt
nix/: shell.nix
src/cell/: cell.cpp  cell.h
src/cell_space/: cell_space.cpp  cell_space.h  timestep_functions.cpp  timestep_functions.h  transition_functions.cpp  transition_functions.h
src/file_io/: file_io.cpp  file_io.h
src/gca/: gca.cpp
